@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-2634: Framebuilder can enable Webtrekk
 
+- ZON-2628: Redirect to standard article view if AMP is disabled
+
 - MAINT: desktop_only parameter in framebuilder needs no value
 
 
